# generateScreenshots

./: CMakeLists.txt  generateSceenshots.cpp  generateScreenshots.h  main.cpp
include/: glad.c
include/glad/: glad.h
web-viewer/: MetaScreenshots_lib.js  demo.html  minimap.js  myscript.js  panzoom_lib.js  style.css  viewer-pan-zoom.html
